Change :hover to only apply to hover media devices, to prevent hover effect from sticking when clicking on elements on mobile. Set tap-highlight:transparent

--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body, input, button, textarea, select {
@@ -1064,8 +1065,10 @@ a {
   color: var(--color-primary);
   text-decoration: none;
 }
-a:hover {
-  color: var(--color-primary);
+@media (hover: hover) {
+  a:hover {
+    color: var(--color-primary);
+  }
 }
 
 .navbar-link {
@@ -1074,9 +1077,11 @@ a:hover {
   opacity: var(--navlink-opacity);
   transition: var(--transition-default);
 }
-.navbar-link:hover {
-  color: var(--color-primary);
-  text-decoration: none;
+@media (hover: hover) {
+  .navbar-link:hover {
+    color: var(--color-primary);
+    text-decoration: none;
+  }
 }
 
 .btn-primary, .btn-contact, .btn-learn-more, .btn-signin {
@@ -1093,10 +1098,12 @@ a:hover {
 .btn-primary span, .btn-contact span, .btn-learn-more span, .btn-signin span {
   color: white;
 }
-.btn-primary:hover, .btn-contact:hover, .btn-learn-more:hover, .btn-signin:hover {
-  background-color: var(--color-gray-600);
-  color: var(--color-white);
-  text-decoration: none;
+@media (hover: hover) {
+  .btn-primary:hover, .btn-contact:hover, .btn-learn-more:hover, .btn-signin:hover {
+    background-color: var(--color-gray-600);
+    color: var(--color-white);
+    text-decoration: none;
+  }
 }
 
 .btn-signin {
@@ -1149,10 +1156,12 @@ a:hover {
   align-items: center;
   transition: var(--transition-default);
 }
-.btn-dl:hover {
-  background-color: var(--color-gray-600);
-  color: var(--color-white);
-  text-decoration: none;
+@media (hover: hover) {
+  .btn-dl:hover {
+    background-color: var(--color-gray-600);
+    color: var(--color-white);
+    text-decoration: none;
+  }
 }
 
 .btn-chevron, .chevron-discovermore {
@@ -1403,8 +1412,10 @@ a:hover {
 .faq-accordion summary span {
   color: var(--color-heading);
 }
-.faq-accordion summary:hover {
-  background-color: var(--color-faqchevronbg);
+@media (hover: hover) {
+  .faq-accordion summary:hover {
+    background-color: var(--color-faqchevronbg);
+  }
 }
 .faq-accordion p {
   padding-inline: 1.5rem;
