--- a/css/scss/abstracts/mixins/_mixins-buttons.scss
+++ b/css/scss/abstracts/mixins/_mixins-buttons.scss
@@ -1,3 +1,5 @@
+@use './mixins-media' as *;
+
 @mixin btn {
   border-radius: 8px;
   border: none;
@@ -12,9 +14,11 @@
   }
   
   &:hover {
-    background-color: var(--color-gray-600);
-    color: var(--color-white);
-    text-decoration: none;
+    @include hover {
+      background-color: var(--color-gray-600);
+      color: var(--color-white);
+      text-decoration: none;
+    }
   }
 }
 
