--- a/css/scss/components/_faq.scss
+++ b/css/scss/components/_faq.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/' as *;
+
 .faq-accordion {
   --_faq-border: 1px solid var(--color-faqoutline);
   margin-top: 3.5rem;
@@ -38,7 +40,9 @@
     }
 
     &:hover {
-      background-color: var(--color-faqchevronbg);
+      @include hover {
+        background-color: var(--color-faqchevronbg);
+      }
     }
 
     /* Hide marker */
